# QMiniZip

./: .cproject  .project  CMakeLists.txt  LICENSE  README.md
src/: Archive.cpp  Archive.h  CMakeLists.txt  Compressor.cpp  Compressor.h  FileInfo.cpp  FileInfo.h  NewFileInfo.cpp  NewFileInfo.h  Zip.cpp  Zip.h  ZipFile.cpp  ZipFile.h  ZipFileImpl.cpp  ZipFileImpl.h  ZipImpl.cpp  ZipImpl.h  ZipReadIterator.cpp  ZipReadIterator.h
test/: CMakeLists.txt  TestArchive.cpp  TestReadIterator.cpp
test/data/dataset1/folder1/: zen1.txt  zen2.txt
test/data/dataset1/folder2/: zen3.txt
test/data/dataset1/folder3/: zen4.txt
